# document-assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  future_document_agent_plan.txt  plan.md  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/api/: auth.py  limit_checks.py  main.py  services.py  tasks.py
backend/api/routers/: agents.py  auth.py  chapters.py  chat.py  config.py  content.py  credentials.py  documents.py  exams.py  health.py  knowledge_trees.py  users.py
backend/api/schemas/: __init__.py  chapters.py  chat.py  config.py  content.py  documents.py  exams.py  health.py  (+3 more)
backend/application/: delete_document.py  ingest.py  llm_resolver.py  prompts.py  retriever.py
backend/cli/: main.py
backend/core/: exceptions.py
backend/infrastructure/: config.py
backend/tests/: test_agents_router.py  test_api_auth.py  test_auth_jwt.py  test_auth_router.py  test_base_agent.py  test_batching.py  test_chat_router.py  test_cli.py  test_config.py  test_config_router.py  test_custom_documents.py  test_document_chat_agent.py  test_encryption.py  test_flashcard_generator.py  test_flashcard_generator_agent.py  test_groq_llm.py  test_health_router.py  test_huggingface_llm.py  test_infrastructure_config.py  test_kt_chapter_filtering.py  test_limit_checks.py  test_llm_factory.py  test_llm_resolver.py  test_model_fetcher.py  test_ollama_llm.py  test_openrouter_llm.py  test_prompt_quality.py  test_prompts.py  test_question_generator_agent.py  test_remove_chapter.py  test_services.py  test_summarizer.py  test_task_registry.py  test_tasks_router.py  test_txt_loader.py  test_user_model.py  test_user_repository.py  test_users_router.py
(+348 files in other folders)
