[project]
name = "document-assistant"
version = "0.1.0"
description = "Local document reader agent with hybrid retrieval (vector + graph)"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "qdrant-client>=1.7",
    "neo4j>=5.0",
    "pymupdf>=1.24",
    "ebooklib>=0.18",
    "lxml>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running external services (Qdrant, Neo4j)",
]
