[project]
name = "document-assistant"
version = "0.1.0"
description = "Local document reader agent with PostgreSQL text storage and LLM agents"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "pymupdf>=1.24",
    "pdfminer.six>=20221105",
    "ebooklib>=0.18",
    "lxml>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.1",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0",
    "email-validator>=2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running external services (PostgreSQL)",
]
